--- a/build.yaml
+++ b/build.yaml
@@ -21,3 +21,7 @@
 include:
   - board: glove80_lh
   - board: glove80_rh
+  - board: nice_nano_v2
+    shield: corne_left
+  - board: nice_nano_v2
+    shield: corne_right
