--- a/build.yaml
+++ b/build.yaml
@@ -22,6 +22,7 @@ include:
   - board: glove80_lh
   - board: glove80_rh
   - board: nice_nano_v2
-    shield: corne_left
+    shield: corne_left nice_view_adapter nice_view
+    snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
-    shield: corne_right
+    shield: corne_right nice_view_adapter nice_view
