--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           name: glove80.uf2
           path: glove80.uf2
-  build-corne42:
+  build-corne:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
