--- a/config/corne.conf
+++ b/config/corne.conf
@@ -22,3 +22,6 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=y
+
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
