--- a/config/shared_behaviors.dtsi
+++ b/config/shared_behaviors.dtsi
@@ -144,7 +144,7 @@
             compatible = "zmk,behavior-tap-dance";
             #binding-cells = <0>;
             tapping-term-ms = <280>;
-            bindings = <&kp RSHIFT>, <&caps_word>;
+            bindings = <&kp RET>, <&caps_word>;
         };
     };
 };
