bugfix: use proper timestamps to test for new uf2 files

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,5 +18,5 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 # Enable display support for nice!view
 CONFIG_ZMK_DISPLAY=y
 
+# Pointing device support (split-specific configs will enable smooth scrolling)
 CONFIG_ZMK_POINTING=y
-CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
