--- a/config/shared_behaviors.dtsi
+++ b/config/shared_behaviors.dtsi
@@ -6,11 +6,12 @@
 #define QUICK_TAP_MS 175
 
 #define BASE 0
-#define DEV 1
-#define NPAD 2
-#define SYSTEM 3
-#define MOUSE 4
-#define NAV 5
+#define DEVLEFT 1
+#define DEVRIGHT 2
+#define NPAD 3
+#define SYSTEM 4
+#define MOUSE 5
+#define NAV 6
 
 / {
     macros {
@@ -33,6 +34,65 @@
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
             bindings = <&out OUT_BLE>, <&bt BT_SEL 3>;
+        };
+        ctrlaltdel: ctrl_alt_delete {
+            compatible = "zmk,behavior-macro";
+            #binding-cells = <0>;
+            bindings = <&kp LCTRL>, <&kp LALT>, <&kp DEL>;
+        };
+    };
+    combos {
+        compatible = "zmk,combos";
+        /*
+          KEY POSITIONS
+          ╭────────────────────────╮  ╭────────────────────────╮
+          │ 0   1   2   3   4   5    │  │ 6   7   8   9   10  11 │
+          │ 12  13  14  15  16  17   │  │ 18  19  20  21  22  23 │
+          │ 24  25  26  27  28  29   │  │ 30  31  32  33  34  35 │
+          ╰───────────╮ 36  37  38  │  │ 39  40  41 ╭───────────╯
+                       ╰────────────╯  ╰────────────╯
+        */
+        combo_lparen {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <16 15>;
+            layers = <BASE>;
+            bindings = <&kp LPAR>;
+        };
+        combo_lbracket {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <14 15>;
+            layers = <BASE>;
+            bindings = <&kp LBKT>;
+        };
+        combo_lbrace {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <14 15 16>;
+            layers = <BASE>;
+            bindings = <&kp LCBR>;
+        };
+        combo_rparen {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <19 20>;
+            layers = <BASE>;
+            bindings = <&kp RPAR>;
+        };
+        combo_rbracket {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <20 21>;
+            layers = <BASE>;
+            bindings = <&kp RBKT>;
+        };
+        combo_rbrace {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <19 20 21>;
+            layers = <BASE>;
+            bindings = <&kp RCBR>;
         };
     };
     behaviors {
