feat: update corne keymap drawings with new layers and combos

--- a/corne_keymap.yaml
+++ b/corne_keymap.yaml
@@ -4,12 +4,17 @@ layers:
   - [TAB, Q, {t: W, h: MOUSE}, {t: E, h: NAV}, R, T, Y, U, I, O, P, \]
   - [ESC, {t: A, h: LGUI}, {t: S, h: LSHIFT}, {t: D, h: LALT}, {t: F, h: LCTRL}, {t: G, h: NPAD}, {t: H, h: NPAD}, {t: J, h: RCTRL}, {t: K, h: RALT}, {t: L, h: RSHIFT}, {t: ;, h: RGUI}, '''']
   - [SYSTEM, Z, X, C, V, B, N, M, ',', ., /, SYSTEM]
-  - [NAV, BSPC, {t: DEL, h: DEV}, {t: RET, h: DEV}, SPACE, Enter/Caps]
-  DEV:
-  - ['`', '!', '@', '%', ▽, '?', ^, '`', '[', ']', '=', ▽]
-  - ['#', ^, '=', _, $, '*', +, '|', (, ), _, '-']
-  - ['~', <, '|', '-', '>', /, $, '%', '{', '}', '&', ▽]
-  - ['\', ▽, {type: held}, ▽, ▽, ▽]
+  - [NAV, BSPC, {t: DEL, h: DEVRIGHT}, {t: RET, h: DEVLEFT}, SPACE, Enter/Caps]
+  DEVLEFT:
+  - ['`', '!', '@', '%', '', '?', '', '', '', '', '', '']
+  - ['#', ^, '=', _, $, '*', '', '', '', '', '', '']
+  - ['~', <, '|', '-', '>', /, '', '', '', '', '', '']
+  - ['\', '', '', {type: held}, '', '']
+  DEVRIGHT:
+  - ['', '', '', UP ARROW, '', '', ^, '`', '[', ']', '=', '']
+  - ['', '', LEFT ARROW, DOWN ARROW, RIGHT ARROW, '', +, {t: '|', h: RCTRL}, {t: '(', h: RALT}, {t: ')', h: RSHIFT}, {t: ':', h: RGUI}, '-']
+  - ['', '', '', '', '', '', $, '%', '{', '}', '&', '']
+  - ['', '', {type: held}, '', '', '']
   NPAD:
   - [PREV, NEXT, PP, UP ARROW, VOL UP, MUTE, (, KP 7, KP 8, KP 9, KP MINUS, SCROLLLOCK]
   - [▽, '', LEFT ARROW, DOWN ARROW, RIGHT ARROW, {t: PG UP, type: held}, '%', KP 4, KP 5, KP 6, KP PLUS, '']
@@ -30,3 +35,10 @@ layers:
   - [▽, Gui+5, Gui+6, Gui+7, Gui+8, ▽, LEFT ARROW, DOWN ARROW, UP ARROW, RIGHT ARROW, '', '']
   - [▽, ▽, ▽, ▽, ▽, ▽, '', '', '', '', '', '']
   - ['', ▽, ▽, ▽, '', '']
+combos:
+  - {p: [15, 16], k: '(', l: [BASE]}
+  - {p: [14, 15], k: '[', l: [BASE]}
+  - {p: [14, 15, 16], k: '{', l: [BASE]}
+  - {p: [19, 20], k: ')', l: [BASE]}
+  - {p: [20, 21], k: ']', l: [BASE]}
+  - {p: [19, 20, 21], k: '}', l: [BASE]}
