--- a/config/shared_behaviors.dtsi
+++ b/config/shared_behaviors.dtsi
@@ -71,7 +71,7 @@
             require-prior-idle-ms = <150>;
             key-positions = <14 15 16>;
             layers = <BASE>;
-            bindings = <&kp LCBR>;
+            bindings = <&kp LBRC>;
         };
         combo_rparen {
             timeout-ms = <50>;
@@ -92,7 +92,7 @@
             require-prior-idle-ms = <150>;
             key-positions = <19 20 21>;
             layers = <BASE>;
-            bindings = <&kp RCBR>;
+            bindings = <&kp RBRC>;
         };
     };
     behaviors {
