feat: update bracket combos to be easier

--- a/corne_keymap.yaml
+++ b/corne_keymap.yaml
@@ -38,7 +38,7 @@ layers:
 combos:
   - {p: [15, 16], k: '(', l: [BASE]}
   - {p: [14, 15], k: '[', l: [BASE]}
-  - {p: [14, 15, 16], k: '{', l: [BASE]}
+  - {p: [14, 16], k: '{', l: [BASE]}
   - {p: [19, 20], k: ')', l: [BASE]}
   - {p: [20, 21], k: ']', l: [BASE]}
-  - {p: [19, 20, 21], k: '}', l: [BASE]}
+  - {p: [19, 21], k: '}', l: [BASE]}
