--- a/config/shared_behaviors.dtsi
+++ b/config/shared_behaviors.dtsi
@@ -69,7 +69,7 @@
         combo_lbrace {
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
-            key-positions = <14 15 16>;
+            key-positions = <14 16>;
             layers = <BASE>;
             bindings = <&kp LBRC>;
         };
@@ -90,7 +90,7 @@
         combo_rbrace {
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
-            key-positions = <19 20 21>;
+            key-positions = <19 21>;
             layers = <BASE>;
             bindings = <&kp RBRC>;
         };
