feat: add combos for hyphen and underscore

--- a/corne_keymap.yaml
+++ b/corne_keymap.yaml
@@ -39,6 +39,8 @@ combos:
   - {p: [15, 16], k: '(', l: [BASE]}
   - {p: [14, 15], k: '[', l: [BASE]}
   - {p: [14, 16], k: '{', l: [BASE], a: top, o: -0.05}
+  - {p: [13, 14], k: '_', l: [BASE]}
   - {p: [19, 20], k: ')', l: [BASE]}
   - {p: [20, 21], k: ']', l: [BASE]}
   - {p: [19, 21], k: '}', l: [BASE], a: top, o: -0.05}
+  - {p: [21, 22], k: '-', l: [BASE]}
