--- a/config/shared_behaviors.dtsi
+++ b/config/shared_behaviors.dtsi
@@ -52,6 +52,7 @@
           ╰───────────╮ 36  37  38  │  │ 39  40  41 ╭───────────╯
                        ╰────────────╯  ╰────────────╯
         */
+        /* ----- LEFT HAND ----- */
         combo_lparen {
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
@@ -73,6 +74,14 @@
             layers = <BASE>;
             bindings = <&kp LBRC>;
         };
+        combo_underscore {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <13 14>;
+            layers = <BASE>;
+            bindings = <&kp UNDERSCORE>;
+        };
+        /* ----- RIGHT HAND ----- */
         combo_rparen {
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
@@ -93,6 +102,13 @@
             key-positions = <19 21>;
             layers = <BASE>;
             bindings = <&kp RBRC>;
+        };
+        combo_hyphen {
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+            key-positions = <21 22>;
+            layers = <BASE>;
+            bindings = <&kp MINUS>;
         };
     };
     behaviors {
