feat: use combined dev and npad layer, update ctrlaltdel to be correct

--- a/config/shared_behaviors.dtsi
+++ b/config/shared_behaviors.dtsi
@@ -38,7 +38,7 @@
         ctrlaltdel: ctrl_alt_delete {
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
-            bindings = <&kp LCTRL>, <&kp LALT>, <&kp DEL>;
+            bindings = <&kp LC(LA(DEL))>;
         };
     };
     combos {
